    null default value). (Gustavo, Stas)

- Filter extension:
  . Fixed bug #53150 (FILTER_FLAG_NO_RES_RANGE is missing some IP ranges).
    (Ilia)
  . Fixed bug #52209 (INPUT_ENV returns NULL for set variables (CLI)). (Ilia)
  . Fixed bug #47435 (FILTER_FLAG_NO_RES_RANGE don't work with ipv6).
    (Ilia, valli at icsurselva dot ch)

- IMAP extension:
  . Fixed bug #53377 (imap_mime_header_decode() doesn't ignore \t during long
    MIME header unfolding). (Adam)
    
- Intl extension:
  . Fixed bug #53512 (NumberFormatter::setSymbol crash on bogus $attr values).
    (Felipe)
  . Fixed bug #53612 (Segmentation fault when using cloned several intl
    objects). (Gustavo)
  . Implemented clone functionality for number, date & message formatters. 
    (Stas).

- MySQL Improved extension:
  . Added 'db' and 'catalog' keys to the field fetching functions (FR #39847). 
    (Kalle)
  . Fixed bug #53503 (mysqli::query returns false after successful LOAD DATA 
    query). (Kalle, Andrey)
  . Fixed bug #53425 (mysqli_real_connect() ignores client flags when built to 
    call libmysql). (Kalle, tre-php-net at crushedhat dot com)
  . Fixed buggy counting of affected rows when using the text protocol. The
    collected statistics were wrong when multi_query was used with mysqlnd
    (Andrey)

- OpenSSL extension:
  . Implemented FR #53447 (Cannot disable SessionTicket extension for servers
    that do not support it) by adding a no_ticket SSL context option. (Adam,
    Tony)
  . Fixed bug #53592 (stream_socket_enable_crypto() busy-waits in client mode).
    (Gustavo)
  . Fixed stream_socket_enable_crypto() not honoring the socket timeout in
    server mode. (Gustavo)

- PDO MySQL driver:
  . Implemented FR #47802 (Support for setting character sets in DSN strings). 
    (Kalle)
  . Fixed bug #53551 (PDOStatement execute segfaults for pdo_mysql driver).
    (Johannes)

- PDO Oracle driver:
  . Fixed bug #39199 (Cannot load Lob data with more than 4000 bytes on